Fix search overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1734,8 +1734,7 @@ input:checked~.form__row--displayCondition {
 	overflow: scroll
 }
 .searchFriends li {
-		list-style: none;
-		margin-bottom: var(--margin-s)
+		list-style: none
 	}
 .searchFriends li label {
 			display: -webkit-box;
@@ -1770,7 +1769,7 @@ input:checked~.form__row--displayCondition {
 	left: 0;
 	width: 100%;
 	height: 25%;
-	box-shadow: var(--color-background) 0px -125px 35px -6em inset;
+	box-shadow: var(--color-background) 0px -45px 9px -2em inset;
 }
 
 .searchFriends__avatar {
