--- a/resources/css/components/search-friends.css
+++ b/resources/css/components/search-friends.css
@@ -8,7 +8,6 @@
 	overflow: scroll;
 	& li {
 		list-style: none;
-		margin-bottom: var(--margin-s);
 		& label {
 			display: flex;
 			flex-direction: row;
@@ -42,7 +41,7 @@
 	left: 0;
 	width: 100%;
 	height: 25%;
-	box-shadow: var(--color-background) 0px -125px 35px -6em inset;
+	box-shadow: var(--color-background) 0px -45px 9px -2em inset;
 }
 
 .searchFriends__avatar {
